# SPDX-FileCopyrightText: 2021 - 2023 Robin Vobruba <hoijui.quaero@gmail.com>
#
# SPDX-License-Identifier: Unlicense

[package]
name = "okh-tool"
version = "0.4.4"
license = "AGPL-3.0-or-later"
authors = ["Robin Vobruba <hoijui.quaero@gmail.com>"]
repository = "https://github.com/OPEN-NEXT/LOSH-OKH-tool"
homepage = "https://github.com/OPEN-NEXT/LOSH-OKH-tool"
keywords = ["cli", "utility", "conversion", "okh"]
categories = ["command-line-utilities", "text-processing"]
readme = "README.md"
edition = "2021"

[features]
# Activate this to enable all OKH v1 properties,
# as per default, only those requried for converting to OKH LOSH
# are enabled
v1_non_losh = [] # feature has no explicit dependencies

[lints.rust]
rust_2021_compatibility = "warn"

[lints.clippy]
all = "deny"
pedantic = "warn"
nursery = "warn"
cargo = "warn"
wildcard_enum_match_arm = "warn"
string_slice = "warn"
indexing_slicing = "warn"
clone_on_ref_ptr = "warn"
try_err = "warn"
shadow_reuse = "warn"
empty_structs_with_brackets = "warn"
else_if_without_else = "warn"
use_debug = "warn"
print_stdout = "warn"
print_stderr = "warn"
enum_variant_names = "warn"
[dependencies]
chrono = "0.4"
clap = { version = "4.0", features = ["cargo"] }
codify = { version = "0.6", package = "codify_hoijui" }
const_format = "0.2"
csv = "1.1"
git-version = "0.3"
git2 = { version = "0.18", default-features = false } # "default-features = false" is required for MUSL compatibility, to get rid of OpenSSL
globset = "0.4"
jsonschema = "0.17"
lingua = "1.3"
log = "0.4"
num-derive = "0.4"
num-traits = "0.2"
once_cell = "1.9"
openssl-sys = { features = [ "vendored" ] } # better MUSL compatibility
projvar = "0.19"
regex = "1.5"
relative-path = { version = "1.6", features = ["serde"] }
reqwest = { version = "0", features = ["blocking"] }
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
simplelog = "0.12"
spdx = "0.10"
strum = "0.25"
strum_macros = "0.25"
thiserror = "1.0"
toml = "0.8"
url = { version = "2.2", features = ["serde"] }
walkdir = "2"
yaml-rust = "0.4"

[build-dependencies]
codify = { version = "0.6", package = "codify_hoijui" }
csv = "1.1"
regex = "1.5"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
