# SPDX-FileCopyrightText: 2021 - 2025 Robin Vobruba <hoijui.quaero@gmail.com>
#
# SPDX-License-Identifier: Unlicense

[package]
name = "okh-tool"
version = "2.4.2"
license = "AGPL-3.0-or-later"
authors = ["Robin Vobruba <hoijui.quaero@gmail.com>"]
description = """
    A CLI tool to deal with Open Know-How (OKH) data files.
    Its main functionalities are:
    validation of and conversion between the different formats.
    """
repository = "https://github.com/OPEN-NEXT/LOSH-OKH-tool"
homepage = "https://github.com/OPEN-NEXT/LOSH-OKH-tool"
keywords = ["cli", "utility", "conversion", "okh"]
categories = ["command-line-utilities", "text-processing"]
readme = "README.md"
edition = "2024"

[features]
# Activate this to enable all OKH v1 properties,
# as per default, only those required for converting to OKH LOSH
# are enabled
v1_non_losh = [] # feature has no explicit dependencies

[lints.rust]
rust_2024_compatibility = { level = "warn", priority = -1 }
rust_2021_compatibility = { level = "warn", priority = -1 }
dead_code = "allow"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
wildcard_enum_match_arm = "warn"
string_slice = "warn"
indexing_slicing = "warn"
clone_on_ref_ptr = "warn"
try_err = "warn"
shadow_reuse = "warn"
empty_structs_with_brackets = "warn"
else_if_without_else = "warn"
use_debug = "warn"
print_stdout = "warn"
print_stderr = "warn"
enum_variant_names = "allow"
# NOTE allowed because:
#      If the same regex is going to be applied to multiple inputs,
#      the pre-computations done by Regex construction
#      can give significantly better performance
#      than any of the `str`-based methods.
trivial_regex = "allow"
default_trait_access = "allow"
struct_excessive_bools = "allow"
fn_params_excessive_bools = "allow"
result_large_err = "allow"

[dependencies]
chrono = "0.4"
clap = { version = "4.5", features = ["cargo"] }
codify = { version = "0.6", package = "codify_hoijui" }
const_format = "0.2"
git-version = "0.3"
git2 = { version = "0.20", default-features = false } # "default-features = false" is required for MUSL compatibility, to get rid of OpenSSL
jsonschema = "0.30"
lingua = "1.6"
log = "0.4"
num-derive = "0.4"
num-traits = "0.2"
projvar = "0.19"
regex = "1.10"
relative-path = { version = "2.0", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
simplelog = "0.12"
spdx = "0.10"
strum = "0.27"
strum_macros = "0.27"
thiserror = "2.0"
toml = "0.9"
url = { version = "2.5", features = ["serde"] }
walkdir = "2.4"
yaml-rust = "0.4"

[build-dependencies]
codify = { version = "0.6", package = "codify_hoijui" }
csv = "1.3"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
